feat: implement api changes
locations api
 - add username as parameter when creating a location
history api
 - remove history_scl table
 - add location to data resource object
archiving api
 - add archive resource history endpoint
